--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 click = "^8.1.3"
 pytest = "^7.2.0"
 black = "^22.12.0"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
