--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ requests = "^2.28.1"
 pytest = "^7.2.0"
 black = "^22.12.0"
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.15.9"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
